--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     margin: 0px;
 }
 
+body{
+    background-color: rgb(114, 13, 13);
+}
+
 .hidden {
     display: none;
 }
@@ -10,6 +14,7 @@ header{
     font-size: 26px;
     background-image: linear-gradient(rgb(170, 53, 53),red);
     margin: 0px;
+    margin-bottom: 50px;
     padding: 15px;
     text-align: center;
     font-family: sans-serif;
@@ -17,39 +22,62 @@ header{
 }
 .cards{
     display: flex;
-    justify-content: space-between;
-    width: 1200px;
-    margin: 0 auto;  
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 0 auto; 
+    height: 300px;  
+
 
 }
+
+.card{
+    background-color: rgb(199, 53, 53);
+    border-radius: 25px;
+    text-align: center;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 500px;
+    margin: 20px;
+    flex-flow: row;
+    height: 300px
+}
 .card-head{
-    border-style: solid;
-    border-radius: 10px 10px 0px 0px;
+    background-color: rgb(250, 69, 69);
+    padding: 10px;
+    border-radius: 25px 25px 0px 0px;
 }
 .card p{
     padding-left: 15px;
     padding-right: 15px;
-    border-style: solid;
+  
 }
-.card{
-    text-align: center;
-    flex: 1 1 200px;
+
+.card h2{
+    color:whitesmoke;
+    font-family: sans-serif;
 }
-.card-2{
-    flex: 1 1 200px;
+
+.card p{
+    margin-top:40px;
+    font-size: larger;
+    color:whitesmoke;
+}
+
+/* .card-2{
+    
 }
 .-card-3{
-    flex: 1 1 200px;
+
 }
 .card-4{
-    flex: 1 1 200px;
+
 }
 .card-5{
-    flex: 1 1 200px;
+  
 }
 .card-6{
-    flex: 1 1 200px;
-}
+ 
+} */
 
 .celebrities {
     display: flex;
@@ -58,12 +86,12 @@ header{
     margin: 0 auto;
 }
 
-.celeb {
+/* .celeb {
     
     
-}
+} */
 
-.abe {
-    wi
-    background-image: "images/Abe.png";
+.celeb-image{
+    width: 200px;
+    height: 200px;
 }
